# kiro-rider-light

./: .gitignore  .vscodeignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  package.json  pyrightconfig.json
.kiro/steering/: product.md  structure.md  tech.md
examples/: build.gradle.kts  build.gradle.kts.tokens.yaml
examples/src/main/java/examples/: Generic.java  Generic.java.tokens.yaml
examples/src/main/js/: generic.js  generic.js.tokens.yaml
examples/src/main/kotlin/examples/: generic.kt  generic.kt.tokens.yaml
examples/src/main/other/: generic.css  generic.css.tokens.yaml  generic.html  generic.html.tokens.yaml  generic.json  generic.json.tokens.yaml  generic.md  generic.md.tokens.yaml  generic.yaml  generic.yaml.tokens.yaml  preview.md
examples/src/main/py/: generic.py  generic.py.tokens.yaml
examples/src/main/ts/: generic.ts  generic.ts.tokens.yaml
src/: extension.js
styles/: markdown-highlight.css  markdown-preview.css  markdown-variables.css
theme_gen/: README.md  main.py  pyproject.toml
theme_gen/core/: __init__.py  font_style.py  hue_series.py  tcol.py
theme_gen/css/: __init__.py  markdown_variables.py
theme_gen/lang/: __init__.py  base.py  css.py  html.py  java.py  js.py  json_lang.py  kotlin.py  markdown.py  protocol.py  python.py  registry.py  script.py  semantic.py  ts.py  yaml.py
theme_gen/palette/: __init__.py  editor.py  palette.py  syntax.py  theme.py
theme_gen/tests/: conftest.py  test_css.py  test_generate_theme.py  test_lang.py  test_palette.py  test_registry.py  test_snapshot.py  test_tcol.py  test_theme.py  test_ui.py
theme_gen/tests/fixtures/: kiro-rider-dark.snapshot.json  kiro-rider-light.snapshot.json
theme_gen/ui/: __init__.py  base.py  chat.py  composer.py  debug.py  editor.py  lists.py  panels.py  protocol.py  symbols.py  tabs.py  terminal.py  testing.py  vcs.py  widgets.py
themes/: Kiro Rider Light-color-theme.json
