[project]
name = "theme-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "coloraide>=8.8",
  "pyjson5>=2.0",
  "scipy>=1.17",
  "structlog>=25.5",
]

[project.optional-dependencies]
test = ["pytest>=9.0"]

[dependency-groups]
dev = [
  "black>=26.3",
  "flake8>=7.3",
  "mypy>=2.1",
  "pylint>=4.0",
  "pytest>=9.0",
  "ruff>=0.15",
  "scipy-stubs>=1.17",
]

[tool.basedpyright]
extraPaths = ["."]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pylint.main]
source-roots = ["custom-mcps"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages_control"]
disable = ["C0116", "C0115", "W0613"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "EM", "T20", "S", "TRY003", "COM812", "ERA001"]

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true
